-fixedphrasebook expand overflow-y bug -fixed piano input on phrasebook bug -added help tooltip for phrasebook -add prompt for save -search field help text

--- a/css/appStylesheet.css
+++ b/css/appStylesheet.css
@@ -194,6 +194,7 @@ header {
     position: fixed;
     width: 100%;
     top: 0px;
+    z-index: 1;
 }
 
 h1 {
@@ -296,7 +297,7 @@ h2 {
 }
 
 .content h3 {
-    margin: 30px 0px 20px 0px;
+    margin: 50px 0px 20px 0px;
     display: block;
     font-size: 1.3em;
     letter-spacing: 0.06em;
@@ -1149,6 +1150,7 @@ h4 span {
     margin-left: 20px;
     font-size: 0.6em;
     margin-top: 5px;
+    cursor: default;
 }
 
 .phraseSelection {
@@ -1279,6 +1281,89 @@ h4 span {
 hr {
     margin: 20px 0px;
     border: solid 1px #f3f3f3;
+}
+
+
+/* Blocks for phrasebook */
+
+.blocks {
+    display: inline-block;
+    width: 100%;
+    padding: 20px;
+    background: #efefef;
+    box-sizing: border-box;
+    color: #676767;
+    font-size: 1em;
+    font-weight: bold;
+    font-family: 'Roboto Mono';
+}
+
+.blocks>div {
+    border: 1px solid #f1f1f1;
+    float: left;
+    width: 12%;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+
+/* Help */
+
+.phraseHeading>#help {
+    margin-right: 10px;
+}
+
+
+/* Tooltip container */
+
+.tooltip {
+    position: relative;
+    z-index: 0;
+}
+
+
+/* Tooltip text */
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 420px;
+    background-color: #9a9a9a;
+    color: #fff;
+    text-align: left;
+    padding: 15px;
+    border-radius: 3px;
+    position: absolute;
+    z-index: 1;
+    font-size: 0.7em;
+    letter-spacing: 0.2em;
+    line-height: 1.2em;
+    right: 150%;
+    top: -400%;
+}
+
+.tooltiptext ul {
+    margin-top: 10px;
+}
+
+.tooltiptext ul li {}
+
+.tooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    /* To the right of the tooltip */
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent #9a9a9a;
+}
+
+
+/* Show the tooltip text when you mouse over the tooltip container */
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
 
 @media (max-width:1217px) and (min-width:320px) {
